openmediavault (6.1.1-1) stable; urgency=low

  * Do not request a confirmation after the shared folders ACL page
    has been saved and is exited.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 04 Dec 2022 13:19:18 +0100

openmediavault (6.1.0-1) stable; urgency=low

  * Update locale files.
  * Various improvements.
  * Fixed a bug in the file system page. Allow unmounting of read-only
    file systems.
  * Fix render bug in the notification sidebar.
  * Migrate to Transloco i18n library in the UI.
  * Request confirmation to discard pending changes when leaving
    a page.
  * Attach to running background task if UI is reloaded.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 15 Nov 2022 18:12:42 +0100

openmediavault (6.0.46-5) stable; urgency=low

  * Update locale files.
  * Various improvements.
  * Hardening the quota deployment script. Skip users/groups that
    do not exists anymore.
  * Finally fixing the /run/proftpd issue the systemd way.
  * Issue #1377: Display some information about the dirty modules
    in the "Apply configuration" toolbar.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 01 Nov 2022 11:11:04 +0200

openmediavault (6.0.45-1) stable; urgency=low

  * Fix issue when changing APM, spin-down time or write cache
    settings of disks.
  * Fix an SMB issue when a user is created/modified and the
    password contains backslashes. This caused problems in
    pdbedit.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 16 Oct 2022 01:53:06 +0200

openmediavault (6.0.44-1) stable; urgency=low

  * Make sure the hostname is in lower case (e.g. /etc/hostname
    and /etc/hosts).

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 08 Oct 2022 13:39:48 +0200

openmediavault (6.0.43-1) stable; urgency=low

  * Update locale files.
  * Various improvements.
  * Issue #1400: Strip whitespaces from the user name at the
    authentication process.
